// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots tree JSON tree 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-377 MuiGrid-spacing-xs-16-400"
    >
      <div
        className="MuiGrid-item-378 MuiGrid-grid-xs-12-417 MuiGrid-grid-md-12-445 tree-wrapper Tree-root-375"
      >
        <div
          className="MuiList-root-474"
        >
          <li
            className="MuiListItem-container-479"
          >
            <div
              className="MuiButtonBase-root-489 MuiListItem-root-478 MuiListItem-default-481 MuiListItem-gutters-485 MuiListItem-button-486 MuiListItem-secondaryAction-487"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-492 Component-root-493 Component-string-494"
              >
                 String 
              </pre>
              <span
                className="MuiButtonBase-root-489 MuiIconButton-root-515 MuiSwitchBase-root-511 MuiCheckbox-root-505 MuiCheckbox-colorSecondary-510"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-520"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-521"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-514"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-530"
              >
                <span
                  className="MuiTypography-root-536 MuiTypography-subheading-543 MuiListItemText-primary-533"
                >
                  <b>
                    name
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    @latticejs/tree
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-562"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-569"
            />
          </li>
          <li
            className="MuiListItem-container-479"
          >
            <div
              className="MuiButtonBase-root-489 MuiListItem-root-478 MuiListItem-default-481 MuiListItem-gutters-485 MuiListItem-button-486 MuiListItem-secondaryAction-487"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-492 Component-root-493 Component-string-494"
              >
                 String 
              </pre>
              <span
                className="MuiButtonBase-root-489 MuiIconButton-root-515 MuiSwitchBase-root-511 MuiCheckbox-root-505 MuiCheckbox-colorSecondary-510"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-520"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-521"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-514"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-530"
              >
                <span
                  className="MuiTypography-root-536 MuiTypography-subheading-543 MuiListItemText-primary-533"
                >
                  <b>
                    version
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    1.0.1-alpha.10
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-562"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-569"
            />
          </li>
          <li
            className="MuiListItem-container-479"
          >
            <div
              className="MuiButtonBase-root-489 MuiListItem-root-478 MuiListItem-default-481 MuiListItem-gutters-485 MuiListItem-button-486 MuiListItem-secondaryAction-487"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-492 Component-root-493 Component-string-494"
              >
                 String 
              </pre>
              <span
                className="MuiButtonBase-root-489 MuiIconButton-root-515 MuiSwitchBase-root-511 MuiCheckbox-root-505 MuiCheckbox-colorSecondary-510"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-520"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-521"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-514"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-530"
              >
                <span
                  className="MuiTypography-root-536 MuiTypography-subheading-543 MuiListItemText-primary-533"
                >
                  <b>
                    license
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    MIT
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-562"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-569"
            />
          </li>
          <li
            className="MuiListItem-container-479"
          >
            <div
              className="MuiButtonBase-root-489 MuiListItem-root-478 MuiListItem-default-481 MuiListItem-gutters-485 MuiListItem-button-486 MuiListItem-secondaryAction-487"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-492 Component-root-493 Component-string-494"
              >
                 String 
              </pre>
              <span
                className="MuiButtonBase-root-489 MuiIconButton-root-515 MuiSwitchBase-root-511 MuiCheckbox-root-505 MuiCheckbox-colorSecondary-510"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-520"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-521"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-514"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-530"
              >
                <span
                  className="MuiTypography-root-536 MuiTypography-subheading-543 MuiListItemText-primary-533"
                >
                  <b>
                    main
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    index.js
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-562"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-569"
            />
          </li>
          <li
            className="MuiListItem-container-479"
          >
            <div
              className="MuiButtonBase-root-489 MuiListItem-root-478 MuiListItem-default-481 MuiListItem-gutters-485 MuiListItem-button-486 MuiListItem-secondaryAction-487"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-492 Component-root-493 Component-string-494"
              >
                 String 
              </pre>
              <span
                className="MuiButtonBase-root-489 MuiIconButton-root-515 MuiSwitchBase-root-511 MuiCheckbox-root-505 MuiCheckbox-colorSecondary-510"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-520"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-521"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-514"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-530"
              >
                <span
                  className="MuiTypography-root-536 MuiTypography-subheading-543 MuiListItemText-primary-533"
                >
                  <b>
                    module
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    dist/es/dag.es.js
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-562"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-569"
            />
          </li>
          <li
            className="MuiListItem-container-479"
          >
            <div
              className="MuiButtonBase-root-489 MuiListItem-root-478 MuiListItem-default-481 MuiListItem-gutters-485 MuiListItem-button-486 MuiListItem-secondaryAction-487"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-492 Component-root-493 Component-array-496"
              >
                  [  ]  
              </pre>
              <span
                className="MuiButtonBase-root-489 MuiIconButton-root-515 MuiSwitchBase-root-511 MuiCheckbox-root-505 MuiCheckbox-colorSecondary-510"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-520"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-521"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-514"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-530"
              >
                <span
                  className="MuiTypography-root-536 MuiTypography-subheading-543 MuiListItemText-primary-533"
                >
                  <b>
                    files
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-562"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-569"
            />
          </li>
          <li
            className="MuiListItem-container-479"
          >
            <div
              className="MuiButtonBase-root-489 MuiListItem-root-478 MuiListItem-default-481 MuiListItem-gutters-485 MuiListItem-button-486 MuiListItem-secondaryAction-487"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-492 Component-root-493 Component-object-497"
              >
                  {  }  
              </pre>
              <span
                className="MuiButtonBase-root-489 MuiIconButton-root-515 MuiSwitchBase-root-511 MuiCheckbox-root-505 MuiCheckbox-colorSecondary-510"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-520"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-521"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-514"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-530"
              >
                <span
                  className="MuiTypography-root-536 MuiTypography-subheading-543 MuiListItemText-primary-533"
                >
                  <b>
                    scripts
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-562"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-569"
            />
          </li>
          <li
            className="MuiListItem-container-479"
          >
            <div
              className="MuiButtonBase-root-489 MuiListItem-root-478 MuiListItem-default-481 MuiListItem-gutters-485 MuiListItem-button-486 MuiListItem-secondaryAction-487"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-492 Component-root-493 Component-object-497"
              >
                  {  }  
              </pre>
              <span
                className="MuiButtonBase-root-489 MuiIconButton-root-515 MuiSwitchBase-root-511 MuiCheckbox-root-505 MuiCheckbox-colorSecondary-510"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-520"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-521"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-514"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-530"
              >
                <span
                  className="MuiTypography-root-536 MuiTypography-subheading-543 MuiListItemText-primary-533"
                >
                  <b>
                    peerDependencies
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-562"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-569"
            />
          </li>
          <li
            className="MuiListItem-container-479"
          >
            <div
              className="MuiButtonBase-root-489 MuiListItem-root-478 MuiListItem-default-481 MuiListItem-gutters-485 MuiListItem-button-486 MuiListItem-secondaryAction-487"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-492 Component-root-493 Component-object-497"
              >
                  {  }  
              </pre>
              <span
                className="MuiButtonBase-root-489 MuiIconButton-root-515 MuiSwitchBase-root-511 MuiCheckbox-root-505 MuiCheckbox-colorSecondary-510"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-520"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-521"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-514"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-530"
              >
                <span
                  className="MuiTypography-root-536 MuiTypography-subheading-543 MuiListItemText-primary-533"
                >
                  <b>
                    devDependencies
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-562"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-569"
            />
          </li>
          <li
            className="MuiListItem-container-479"
          >
            <div
              className="MuiButtonBase-root-489 MuiListItem-root-478 MuiListItem-default-481 MuiListItem-gutters-485 MuiListItem-button-486 MuiListItem-secondaryAction-487"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-492 Component-root-493 Component-object-497"
              >
                  {  }  
              </pre>
              <span
                className="MuiButtonBase-root-489 MuiIconButton-root-515 MuiSwitchBase-root-511 MuiCheckbox-root-505 MuiCheckbox-colorSecondary-510"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-520"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-521"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-514"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-530"
              >
                <span
                  className="MuiTypography-root-536 MuiTypography-subheading-543 MuiListItemText-primary-533"
                >
                  <b>
                    dependencies
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-562"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-569"
            />
          </li>
          <li
            className="MuiListItem-container-479"
          >
            <div
              className="MuiButtonBase-root-489 MuiListItem-root-478 MuiListItem-default-481 MuiListItem-gutters-485 MuiListItem-button-486 MuiListItem-secondaryAction-487"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-492 Component-root-493 Component-object-497"
              >
                  {  }  
              </pre>
              <span
                className="MuiButtonBase-root-489 MuiIconButton-root-515 MuiSwitchBase-root-511 MuiCheckbox-root-505 MuiCheckbox-colorSecondary-510"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-520"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-521"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-514"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-530"
              >
                <span
                  className="MuiTypography-root-536 MuiTypography-subheading-543 MuiListItemText-primary-533"
                >
                  <b>
                    jest
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-562"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-569"
            />
          </li>
          <li
            className="MuiListItem-container-479"
          >
            <div
              className="MuiButtonBase-root-489 MuiListItem-root-478 MuiListItem-default-481 MuiListItem-gutters-485 MuiListItem-button-486 MuiListItem-secondaryAction-487"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-492 Component-root-493 Component-object-497"
              >
                  {  }  
              </pre>
              <span
                className="MuiButtonBase-root-489 MuiIconButton-root-515 MuiSwitchBase-root-511 MuiCheckbox-root-505 MuiCheckbox-colorSecondary-510"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-520"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-521"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-514"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-530"
              >
                <span
                  className="MuiTypography-root-536 MuiTypography-subheading-543 MuiListItemText-primary-533"
                >
                  <b>
                    publishConfig
                  </b>
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-562"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-569"
            />
          </li>
          <li
            className="MuiListItem-container-479"
          >
            <div
              className="MuiButtonBase-root-489 MuiListItem-root-478 MuiListItem-default-481 MuiListItem-gutters-485 MuiListItem-button-486 MuiListItem-secondaryAction-487"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <pre
                className="MuiListItemIcon-root-492 Component-root-493 Component-string-494"
              >
                 String 
              </pre>
              <span
                className="MuiButtonBase-root-489 MuiIconButton-root-515 MuiSwitchBase-root-511 MuiCheckbox-root-505 MuiCheckbox-colorSecondary-510"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-520"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-521"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-514"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-530"
              >
                <span
                  className="MuiTypography-root-536 MuiTypography-subheading-543 MuiListItemText-primary-533"
                >
                  <b>
                    gitHead
                  </b>
                  : 
                   "
                  <pre
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    c1aad20555302fad47d2d61d1ff0f48f6d566083
                  </pre>
                  "
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-562"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-569"
            />
          </li>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tree basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-3 MuiGrid-spacing-xs-16-26"
    >
      <div
        className="MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-md-12-71 tree-wrapper Tree-root-1"
      >
        <div
          className="MuiList-root-100"
        >
          <li
            className="MuiListItem-container-105"
          >
            <div
              className="MuiButtonBase-root-115 MuiListItem-root-104 MuiListItem-default-107 MuiListItem-gutters-111 MuiListItem-button-112 MuiListItem-secondaryAction-113"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-119"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 2c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6H6zm7 7V3.5L18.5 9H13z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiButtonBase-root-115 MuiIconButton-root-138 MuiSwitchBase-root-134 MuiCheckbox-root-128 MuiCheckbox-colorSecondary-133"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-143"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-119"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-137"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-144"
              >
                <span
                  className="MuiTypography-root-150 MuiTypography-subheading-157 MuiListItemText-primary-147"
                >
                  index.js
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-176"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-183"
            />
          </li>
          <li
            className="MuiListItem-container-105"
          >
            <div
              className="MuiButtonBase-root-115 MuiListItem-root-104 MuiListItem-default-107 MuiListItem-gutters-111 MuiListItem-button-112 MuiListItem-secondaryAction-113"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-119"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiButtonBase-root-115 MuiIconButton-root-138 MuiSwitchBase-root-134 MuiCheckbox-root-128 MuiCheckbox-colorSecondary-133"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-143"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-119"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-137"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-144"
              >
                <span
                  className="MuiTypography-root-150 MuiTypography-subheading-157 MuiListItemText-primary-147"
                >
                  assets
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-176"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-183"
            />
          </li>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tree customized 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-190 MuiGrid-spacing-xs-16-213"
    >
      <div
        className="MuiGrid-item-191 MuiGrid-grid-xs-12-230 MuiGrid-grid-md-12-258 tree-wrapper Tree-root-188"
      >
        <div
          className="MuiList-root-287"
        >
          <li
            className="MuiListItem-container-292"
          >
            <div
              className="MuiButtonBase-root-302 MuiListItem-root-291 MuiListItem-default-294 MuiListItem-gutters-298 MuiListItem-button-299 MuiListItem-secondaryAction-300"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-labelledby="apksi-logos-javascript-title"
                className="MuiListItemIcon-root-305"
                height="1.5em"
                id="si-logos-javascript"
                preserveAspectRatio="xMidYMid"
                style={
                  Object {
                    "margin-right": 0,
                  }
                }
                viewBox="0 0 256 256"
                width="1.5em"
              >
                <title
                  id="apksi-logos-javascript-title"
                >
                  logo of javascript
                </title>
                <path
                  d="M0 0h256v256H0V0z"
                  fill="#F7DF1E"
                />
                <path
                  d="M67.312 213.932l19.59-11.856c3.78 6.701 7.218 12.371 15.465 12.371 7.905 0 12.89-3.092 12.89-15.12v-81.798h24.057v82.138c0 24.917-14.606 36.259-35.916 36.259-19.245 0-30.416-9.967-36.087-21.996M152.381 211.354l19.588-11.341c5.157 8.421 11.859 14.607 23.715 14.607 9.969 0 16.325-4.984 16.325-11.858 0-8.248-6.53-11.17-17.528-15.98l-6.013-2.58c-17.357-7.387-28.87-16.667-28.87-36.257 0-18.044 13.747-31.792 35.228-31.792 15.294 0 26.292 5.328 34.196 19.247L210.29 147.43c-4.125-7.389-8.591-10.31-15.465-10.31-7.046 0-11.514 4.468-11.514 10.31 0 7.217 4.468 10.14 14.778 14.608l6.014 2.577c20.45 8.765 31.963 17.7 31.963 37.804 0 21.654-17.012 33.51-39.867 33.51-22.339 0-36.774-10.654-43.819-24.574"
                />
              </svg>
              <span
                className="MuiButtonBase-root-302 MuiIconButton-root-316 MuiSwitchBase-root-312 MuiCheckbox-root-306 MuiCheckbox-colorSecondary-311"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-321"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-322"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-315"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-331"
              >
                <span
                  className="MuiTypography-root-337 MuiTypography-subheading-344 MuiListItemText-primary-334"
                >
                  index.js
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-363"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-370"
            />
          </li>
          <li
            className="MuiListItem-container-292"
          >
            <div
              className="MuiButtonBase-root-302 MuiListItem-root-291 MuiListItem-default-294 MuiListItem-gutters-298 MuiListItem-button-299 MuiListItem-secondaryAction-300"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-322"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiButtonBase-root-302 MuiIconButton-root-316 MuiSwitchBase-root-312 MuiCheckbox-root-306 MuiCheckbox-colorSecondary-311"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-321"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-322"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiSwitchBase-input-315"
                    data-indeterminate={false}
                    onChange={[Function]}
                    tabIndex={-1}
                    type="checkbox"
                  />
                </span>
              </span>
              <div
                className="MuiListItemText-root-331"
              >
                <span
                  className="MuiTypography-root-337 MuiTypography-subheading-344 MuiListItemText-primary-334"
                >
                  assets
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-363"
              />
            </div>
            <div
              className="MuiListItemSecondaryAction-root-370"
            />
          </li>
        </div>
      </div>
    </div>
  </div>
</div>
`;
